# msedge-tts

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  Readme.md
examples/: get_voices_list_async.rs  get_voices_list_proxy.rs  play.rs  synthesize.rs  synthesize_async.rs  synthesize_proxy.rs  synthesize_proxy_async.rs  synthesize_stream.rs  synthesize_stream_async.rs  synthesize_stream_proxy.rs  synthesize_stream_proxy_async.rs
msedge-tts/: Cargo.toml
msedge-tts/examples/: get_voices_list.rs  get_voices_list_async.rs  synthesize.rs  synthesize_async.rs  synthesize_stream.rs
msedge-tts/src/: lib.rs  tts.rs  voice.rs
msedge-tts/src/tts/: client.rs  mod.rs  native_tls.rs  rustls_tls.rs  stream.rs
src/: constants.rs  error.rs  lib.rs  voice.rs
src/tts/: client.rs  mod.rs  native_tls.rs  proxy.rs  rustls_tls.rs  stream.rs
