[package]
name = "msedge-tts"
version = "0.2.5"
edition = "2024"
description = "This library is a wrapper of MSEdge Read aloud function API. You can use it to synthesize text to speech with many voices MS provided."
license = "MIT OR Apache-2.0"
repository = "https://github.com/hs-CN/msedge-tts"
keywords = ["tts", "text-to-speech", "msedge-tts", "edge-tts"]
categories = ["accessibility"]
readme = "README.md"
exclude = ["examples/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
async-io = "2.6.0"
async-lock = "3.4.2"
async-native-tls = "0.5.0"
async-std = "1.13.2"
async-tungstenite = { version = "0.32.1", features = ["async-native-tls"] }
base64 = "0.22.1"
chrono = "0.4.43"
futures-util = "0.3.31"
http = "1.4.0"
httparse = "1.10.1"
isahc = { version = "1.7.2", features = ["json"] }
native-tls = "0.2.14"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "2.0.18"
tungstenite = { version = "0.28.0", features = ["native-tls"] }
uuid = { version = "1.19.0", features = ["fast-rng", "v4"] }

[dev-dependencies]
smol = "2.0.2"
rodio = "0.21.1"
