[package]
name = "msedge-tts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.31"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tungstenite = { version = "0.21.0", features = ["native-tls"] }
ureq = { version = "2.9.1", features = ["json"] }
uuid = { version = "1.6.1", features = ["fast-rng", "v4"] }
