[package]
name = "msedge-tts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["tungstenite/native-tls"]
ssl-key-log = ["rustls", "webpki-roots", "tungstenite/rustls-tls-webpki-roots"]


[dependencies]
tungstenite = "0.21.0"
anyhow = "1.0.79"
chrono = "0.4.31"
isahc = { version = "1.7.2", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
uuid = { version = "1.6.1", features = ["fast-rng", "v4"] }
rustls = { version = "0.22.2", optional = true }
webpki-roots = { version = "0.26.0", optional = true }
