[package]
name = "msedge-tts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["native-tls"]
native-tls = ["tungstenite/native-tls", "async-tungstenite/async-native-tls"]
ssl-key-log = [
    "tungstenite/rustls-tls-native-roots",
    "rustls",
    "rustls-native-certs",
    "async-tungstenite/async-tls",
    "old_rustls",
    "async-tls",
    "async-net",
]


[dependencies]
anyhow = "1.0.79"
isahc = { version = "1.7.2", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
chrono = "0.4.31"
uuid = { version = "1.6.1", features = ["fast-rng", "v4"] }
tungstenite = "0.21.0"
async-tungstenite = "0.24.0"
futures-util = "0.3.30"
rustls = { version = "0.22.2", optional = true }
rustls-native-certs = { version = "0.7.0", optional = true }
old_rustls = { version = "0.20.6", optional = true, package = "rustls" }
async-tls = { version = "0.12.0", optional = true }
async-net = { version = "2.0.0", optional = true }

[dev-dependencies]
smol = "2.0.0"
